/**

protoc --proto_path=. \  // proto文件所在路径（）
--go_out=. \             // go文件生成的路径
addressbook.proto        // 根据哪些proto文件生成Go文件

 */

syntax = "proto3";
package protobuf; // 此proto文件所在包

option go_package = "../protobuf"; // 生成的Go代码的包路径，不能使用"./"，否则生成的go文件的package为"--"

message SearchRequest {
  string request = 1;
}

message SearchResponse {
  string response = 1;
}

// 定义服务
service Search {
  // 定义服务的接口以及请求参数与返回值(各发一条消息)
  rpc Search(SearchRequest) returns (SearchResponse){}

  // 客户端发多个消息
  rpc ClientStreamSearch(stream SearchRequest) returns (SearchResponse){}

  // 服务端返回多个消息
  rpc ServerStreamSearch(SearchRequest) returns (stream SearchResponse){}

  // 双方都发送多条消息
  rpc StreamSearch(stream SearchRequest) returns (stream SearchResponse){}
}